
14/01/2001 Changes

Refactored Bootstrapper to correctly bootstrap ProtoObject hierarchy according to Smalltalk rules.
Renamed a few methods to make their meaning more clear.
Added RMethod support for applyToWith methods for up to 10 arguments. Redline doesnt support more than
10 keyword arguments right now. It can if required.
Added RObject send method support for up to 10 arguments.
Modified src/test/smalltalk/TestKeyword.st to be an example Class creation message.
Added creation of String and Symbol instances from primitive value string.
Added bootstrap method for 'subclass:instanceVariableNames:classVariableNames:poolDictionaries:category:'


13/01/2011 Changes

Refactored ProtoObject to have more dynamic data depending on being used for a class or instance.
Refactored method dispatch to use new structure of ProtoObject.
*Note* Bootstrapper needs redoing so execution right now will result in NullPointerException. Will
fix a.s.a.p


12/01/2011 Changes

Added grammar to recognise Symbols and Strings.
Added generator methods to generate calls to Smalltalk to convert the primitive String and Symbol into 
Objects.
Added send of keyword messages with simple String or Symbol arguments.


11/01/2011 Changes

Added to grammar to allow parsing of each kind of statement. See 'statements:' in grammar file.
Answering the result of an expression is now implemented. If an expreesion result is not answered
the value is popped off the stack to keep it balanced.
Added Bootstrapper class which initializes ProtoObject instance and registers it in Smalltalk dictionary.
Changed Test.st to call ProtoObject to show method resolving. *Currently* will result in Runtime exception
with a TODO. Will be adding to ProtoObject method dictionary shortly.
Added grammar and nodes to support parsing of keyword messages. *Currently* Keyword message arguments can
only be primary values.


10/01/2011 Changes

Added ProtoMethod as base for all methods.